--- a/app/src/main/res/layout/activity_login___screen.xml
+++ b/app/src/main/res/layout/activity_login___screen.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#F4F5F8">
+        android:layout_height="match_parent">
 
         <EditText
             android:id="@+id/editTextTextPassword2"
             android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/round_corner"
             android:ems="10"
             android:inputType="textPassword"
+            android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/textView4"
@@ -29,17 +29,17 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:text="Password"
             android:textColor="@android:color/black"
-            android:textSize="23dp"
+            android:textSize="20dp"
             app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
             app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 
         <RelativeLayout
             android:id="@+id/relativeLayout2"
             android:layout_width="match_parent"
-            android:layout_height="190dp"
+            android:layout_height="wrap_content"
             android:background="#E6EAFA"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,7 +60,9 @@
                 android:id="@+id/Rlv_tittle"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_below="@+id/imageView2"
                 android:layout_alignParentBottom="true"
+                android:layout_marginTop="50dp"
                 android:background="#ED1C24">
 
                 <TextView
@@ -70,7 +72,7 @@
                     android:layout_centerInParent="true"
                     android:text="LOG IN"
                     android:textColor="@android:color/white"
-                    android:textSize="25sp" />
+                    android:textSize="20sp" />
             </RelativeLayout>
         </RelativeLayout>
 
@@ -83,20 +85,21 @@
             android:layout_marginTop="29dp"
             android:text="Email"
             android:textColor="@android:color/black"
-            android:textSize="23dp"
+            android:textSize="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
 
         <EditText
             android:id="@+id/editTextTextPassword"
             android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/round_corner"
             android:ems="10"
-            android:inputType="textPassword"
+            android:inputType="textPersonName"
+            android:padding="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/textView3"
@@ -127,7 +130,7 @@
             android:id="@+id/relativeLayout3"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="40dp"
             android:background="#D8CFCF"
             app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword2"
             app:layout_constraintStart_toStartOf="@+id/textView5"
@@ -138,9 +141,11 @@
         <Button
             android:id="@+id/button3"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:layout_marginTop="40dp"
+            android:background="@drawable/round_button___"
             android:text="Log In"
+            android:textColor="#ED1C24"
             app:layout_constraintEnd_toEndOf="@+id/relativeLayout3"
             app:layout_constraintStart_toStartOf="@+id/relativeLayout3"
             app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />
