--- a/app/src/main/res/layout/activity_register_screen.xml
+++ b/app/src/main/res/layout/activity_register_screen.xml
@@ -13,10 +13,12 @@
         <Button
             android:id="@+id/button4"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:layout_marginTop="80dp"
             android:layout_marginBottom="80dp"
+            android:background="@drawable/round_button___"
             android:text="Sign Up"
+            android:textColor="#ED1C24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/relativeLayout3"
             app:layout_constraintHorizontal_bias="0.0"
@@ -78,14 +80,14 @@
         <EditText
             android:id="@+id/editTextTextPassword4"
             android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/round_corner"
             android:ems="10"
-            android:paddingLeft="10dp"
             android:inputType="textPassword"
+            android:paddingLeft="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/textView4"
@@ -94,8 +96,8 @@
         <EditText
             android:id="@+id/editTextTextPassword5"
             android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/round_corner"
@@ -114,15 +116,15 @@
             android:layout_marginTop="25dp"
             android:text="Create Password"
             android:textColor="@android:color/black"
-            android:textSize="23dp"
+            android:textSize="20dp"
             app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
             app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
         <EditText
             android:id="@+id/editTextTextPassword2"
             android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/round_corner"
@@ -138,17 +140,17 @@
             android:id="@+id/textView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
+            android:layout_marginTop="20dp"
             android:text="Email"
             android:textColor="@android:color/black"
-            android:textSize="23dp"
+            android:textSize="20dp"
             app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
         <RelativeLayout
             android:id="@+id/relativeLayout2"
             android:layout_width="match_parent"
-            android:layout_height="190dp"
+            android:layout_height="wrap_content"
             android:background="#E6EAFA"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -169,7 +171,9 @@
                 android:id="@+id/Rlv_tittle"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_below="@+id/imageView2"
                 android:layout_alignParentBottom="true"
+                android:layout_marginTop="50dp"
                 android:background="#ED1C24">
 
                 <TextView
@@ -179,7 +183,7 @@
                     android:layout_centerInParent="true"
                     android:text="SIGN UP"
                     android:textColor="@android:color/white"
-                    android:textSize="25sp" />
+                    android:textSize="20sp" />
             </RelativeLayout>
         </RelativeLayout>
 
@@ -192,15 +196,15 @@
             android:layout_marginTop="29dp"
             android:text="Full Name"
             android:textColor="@android:color/black"
-            android:textSize="23dp"
+            android:textSize="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
 
         <EditText
             android:id="@+id/editTextTextPassword"
             android:layout_width="0dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="20dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:background="@drawable/round_corner"
@@ -254,7 +258,7 @@
             android:layout_marginTop="20dp"
             android:text="Invite Code (Optional)"
             android:textColor="@android:color/black"
-            android:textSize="23dp"
+            android:textSize="20dp"
             app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
             app:layout_constraintTop_toBottomOf="@+id/relativeLayout_" />
 
