--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -16,10 +16,20 @@
         android:name="com.inside_coup.UI.ui.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
-
     <fragment
         android:id="@+id/navigation_notifications"
+        android:name="com.inside_coup.UI.Saved_fragment"
+        android:label="@string/title_dashboard"
+        tools:layout="@layout/fragment_saved_fragment" />
+
+    <fragment
+        android:id="@+id/navigation_inbox"
         android:name="com.inside_coup.UI.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+    <fragment
+        android:id="@+id/navigation_more"
+        android:name="com.inside_coup.UI.ui.More.More_fragment"
+        android:label="@string/title_notifications"
+        tools:layout="@layout/fragment_more" />
 </navigation>
